// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Fade in correctly 1`] = `
<div
  data-radium={true}
>
  <div
    style={
      Object {
        "maxHeight": 0,
        "transform": "scaleY(0)",
        "transition": "all 200ms ease-in-out",
      }
    }
  >
    <h3>
       Content 
    </h3>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`renders Grow correctly with custom props 1`] = `
<div
  data-radium={true}
>
  <div
    style={
      Object {
        "background": "red",
        "maxHeight": 10,
        "transform": "scaleY(0.2)",
        "transition": "all 500ms ease-in-out",
      }
    }
  >
    <h3>
       Content 
    </h3>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
